# jorts

./: README.md  io.github.elly_code.jorts.flathub.yml  io.github.elly_code.jorts.yml  meson.build
.github/workflows/: CI.yml
data/: jorts.desktop.in  jorts.gresource.xml  jorts.gschema.xml  jorts.metainfo.xml.in
po/: bn.po  cs.po  da.po  de.po  el.po  es.po  fi.po  fil.po  fr.po  hi.po  io.github.elly_code.jorts.pot  it.po  ja.po  lt.po  nb.po  nl.po  no.po  pl.po  pt.po  pt_br.po  ru.po  sk.po  sv.po  tr.po  uk.po  vi.po  zh.po
po/extra/: bn.po  cs.po  de.po  es.po  fi.po  fil.po  fr.po  hi.po  it.po  nb.po  nl.po  no.po  pt.po  pt_br.po  ru.po  sk.po  sv.po  zh.po
src/: Application.vala  Constants.vala
src/Objects/: NoteData.vala  Themes.vala  Zoom.vala  Zoomkind.vala
src/Services/: ColorController.vala  NoteManager.vala  ScribblyController.vala  Storage.vala  ZoomController.vala
src/Utils/: Libportal.vala  Random.vala
src/Views/: NoteView.vala  PreferencesView.vala
src/Widgets/: ActionBar.vala  EditableLabel.vala  Popover.vala  TextView.vala
src/Widgets/PopoverWidgets/: ColorBox.vala  ColorPill.vala  MonospaceBox.vala  ZoomBox.vala
src/Widgets/PreferencesWidgets/: SettingsSwitch.vala
src/Windows/: PreferenceWindow.vala  StickyNoteWindow.vala
windows/: Jorts-Installer.nsi  deploy.sh
